// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render - duration error 1`] = `
<div>
  <h1
    style="color: red;"
  >
    Error
    : 
    TOO SMALL DURATION VALUE
  </h1>
</div>
`;

exports[`render - with animation 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 80px; height: 92px; width: 144px;"
  >
    <div
      class="current"
    />
    <div
      class="next"
    />
  </div>
</div>
`;

exports[`render - without numbers error 1`] = `
<div>
  <h1
    style="color: red;"
  >
    Error
    : 
    START & END VALUES ARE EMPTY
  </h1>
</div>
`;

exports[`render 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 50px; height: 57.49999999999999px; width: 120px;"
  >
    <div
      class="current"
    />
    <div
      class="next"
    />
  </div>
</div>
`;
